# quarto

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: cli.rs  main.rs  quarto.rs  quatro.rs
