[package]
name = "quarto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
strum = "0.26"
strum_macros = "0.26"
serde = {version = "1.0", features = ["derive"]}

thiserror = "1.0"

log = "0.4"

env_logger = "0.11"

[dev-dependencies]
indoc = "2.0"
maplit = "1.0"
