[package]
name = "quarto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []
init = []


[dependencies]
clap = { version = "4.5", features = ["derive"] }
itertools = "0.12"
strum = "0.26"
strum_macros = "0.26"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.7", features = ["sqlite", "macros", "runtime-tokio"]}

thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"]}

log = "0.4"
env_logger = "0.11"

[dev-dependencies]
indoc = "2.0"
#maplit = "1.0"
